# park_hw_c

./: CMakeLists.txt  README.md  main.c
.github/workflows/: con.yml  config.yml
multiprocess/: CMakeLists.txt  mprlib.h  utils.c
singleprocess/: CMakeLists.txt  sprlib.h  utils.c
src/: a.out  data10k.txt  gen.c
tests/: CMakeLists.txt  test.cpp
